fix pattern animation on docs in dark mode

--- a/src/overrides.css
+++ b/src/overrides.css
@@ -31,8 +31,7 @@
 }
 
 .dark #nd-page {
-  background-image: url("/images/patterns/pattern.png");
-  background-blend-mode: overlay;
+  background-image: url("/images/patterns/pattern-docs-dark.png");
   background-size: 40px 40px;
   background-position: center;
   background-repeat: repeat;
@@ -73,8 +72,8 @@
 .dark #nd-page::before {
   background: radial-gradient(
     circle 50vmax at var(--cursor-x, 50%) var(--cursor-y, 50%),
-    hsla(0, 0%, 22%, 0.1),
-    hsla(0, 2%, 8%, 0)
+    hsla(60, 7%, 8%, 0.05),
+    hsla(60, 7%, 8%, 0.85)
   );
 }
 
